# AOC

./: .clang-format  .gitignore  CMakeLists.txt  README.md  vcpkg.json
aoc_library/: CMakeLists.txt
aoc_library/aoc/: aoc.hpp  file.hpp  types.hpp  utils.hpp
include/: all_days.hpp
include/aoc/: all_days.hpp
include/aoc/2023/: days.hpp
include/aoc_2023/: all_days.hpp  aoc_2023.hpp  day_01.hpp  day_1.hpp  days.hpp
src/: CMakeLists.txt  main.cpp  workbench.cpp
src/aoc_2023/: CMakeLists.txt  day_01.cpp  day_1.cpp  main.cpp
src/workbench/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  test.cpp
